# nescioDB

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
clients/: README.md
clients/java/: README.md  pom.xml
clients/java/example/: Demo.java
clients/java/src/main/java/dev/nescio/: Json.java  NescioClient.java  NescioException.java
clients/python/: README.md  pyproject.toml
clients/python/examples/: demo.py
clients/python/src/nesciodb/: __init__.py
clients/typescript/: README.md  package.json  tsconfig.json
clients/typescript/examples/: demo.ts
clients/typescript/src/: index.ts
docs/: index.html
examples/: bench.rs  realestate.rs
src/: binlog.rs  calibrate.rs  error.rs  lib.rs  main.rs  rng.rs  server.rs  store.rs  templates.rs  time.rs  watch.rs
src/engine/: inference.rs  join.rs  mod.rs  objective.rs  resolve.rs  types.rs
src/model/: coupling.rs  domain.rs  evidence.rs  mod.rs
tests/: engine_test.rs  server_test.rs  watch_test.rs
