[package]
name = "nescio"
version = "0.7.1"
edition = "2021"
rust-version = "1.75"
description = "nescioDB (Aporia): a database whose primary object is ignorance — evidence with decay, regions with entropy, and queries that plan their own data procurement."
license = "MIT"
repository = "https://github.com/PyrraNet/nescioDB"
keywords = ["database", "uncertainty", "probabilistic", "evidence", "entropy"]
categories = ["database-implementations"]
# Clients, docs site, logo and CI live in the repo for humans (and GitHub
# Pages), not in the crate tarball. crates.io renders the README's relative
# image link against the repository, so excluding assets/ loses nothing.
exclude = ["clients", "docs", "assets", ".github"]

[lib]
name = "nescio"
path = "src/lib.rs"

[[bin]]
name = "nescio"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tiny_http = "0.12"

[profile.release]
lto = true
