[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nesciodb"
version = "0.7.1"
description = "Python client for nescioDB — the database that knows what it doesn't know."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "PyrraNet" }]
keywords = ["nesciodb", "database", "uncertainty", "probabilistic", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Typing :: Typed",
]

[project.urls]
Documentation = "https://pyrranet.github.io/nescioDB/"
Repository = "https://github.com/PyrraNet/nescioDB"
Changelog = "https://github.com/PyrraNet/nescioDB/blob/main/CHANGELOG.md"
